# beta-ai

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  agent_tracing_wrapper.py  docker-compose.yaml  langfuse_tracing.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yml
cofacts_ai/: README.md  __init__.py  agent.py  tools.py
hackmd_agent/: .env.sample  agent.py  api_tools.py  mcp_tools.py  tools.py
multi_tool_agent/: agent.py
resolve_url_agent/: agent.py  playwright.py
scripts/: url_benchmark.py  url_resolver_pb2.py  url_resolver_pb2_grpc.py
scripts/url_resolver_proto/: resolve_error_pb2.py  url_resolver_pb2.py  url_resolver_pb2_grpc.py
src/typeDefs/: resolve_error_pb2_grpc.py  url_resolver.proto  url_resolver_pb2.py  url_resolver_pb2_grpc.py
