[project]
name = "adk-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-use>=0.12.6",
    "browserbase>=1.8.0",
    "bs4>=0.0.2",
    "google-adk>=1.23.0",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "httpx>=0.28.1",
    "langfuse>=3.12.1",
    "litellm==1.67.2",
    "openinference-instrumentation-google-adk>=0.1.8",
    "opentelemetry-exporter-otlp>=1.33.0",
    "opentelemetry-sdk>=1.33.0",
    "playwright>=1.58.0",
    "rich>=14.3.1",
    "termcolor>=3.3.0",
    "uvicorn>=0.34.2",
]
